--- a/symfony4/composer.json
+++ b/symfony4/composer.json
@@ -7,8 +7,10 @@
         "ext-iconv": "*",
         "ext-json": "*",
         "doctrine/annotations": "^1.8",
+        "nelmio/api-doc-bundle": "^3.6",
         "phpunit/phpunit": "^8.5",
         "sensio/framework-extra-bundle": "^5.5",
+        "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
@@ -67,7 +69,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "5.0.*"
         }
     }
