--- a/symfony5/composer.json
+++ b/symfony5/composer.json
@@ -23,6 +23,7 @@
     },
     "require-dev": {
         "ext-json": "*",
+        "dama/doctrine-test-bundle": "^6.3",
         "symfony/browser-kit": "5.0.*",
         "symfony/css-selector": "5.0.*",
         "symfony/maker-bundle": "^1.14"
