--- a/symfony5/composer.json
+++ b/symfony5/composer.json
@@ -18,6 +18,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/serializer-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
+        "symfony/validator": "5.0.*",
         "symfony/yaml": "5.0.*",
         "twig/twig": "^2.0"
     },
