--- a/symfony5/config/services_test.yaml
+++ b/symfony5/config/services_test.yaml
@@ -23,31 +23,24 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
         
-    # mapping interface to testing repositories
-    App\Interfaces\IUserRepo: '@UserTestRepo'
-    App\Interfaces\IProductRepo: '@ProductTestRepo'
-    App\Interfaces\IOrderRepo: '@OrderTestRepo'
-    App\Interfaces\IRelationRepo: '@RelationTestRepo'
-    
-    # #38 Make v2 services accessible for tests via aliase). https://symfony.com/doc/current/service_container/alias_private.html#aliasing 
-    # #38 This creates a public alias: even though the original service is private. https://symfonycasts.com/screencast/phpunit/integration-tests
-    test.App\v2\OrderProductCreator:
-        alias: App\v2\OrderProductCreator
-        public: true
+    # mapping interface to production repositories
+    App\Interfaces\IUserRepo: '@UserRepo'
+    App\Interfaces\IProductRepo: '@ProductRepo'
+    App\Interfaces\IOrderRepo: '@OrderRepo'
+    App\Interfaces\IRelationRepo: '@RelationRepo'
 
     # -------- repositories pointed to by interface --------
+    UserRepo:
+        class: App\Repository\Prod\UserRepo
 
-    UserTestRepo:
-        class: App\Repository\Test\UserTestRepo
+    ProductRepo:
+        class: App\Repository\Prod\ProductRepo
 
-    ProductTestRepo:
-        class: App\Repository\Test\ProductTestRepo
+    OrderRepo:
+        class: App\Repository\Prod\OrderRepo
 
-    OrderTestRepo:
-        class: App\Repository\Test\OrderTestRepo
-
-    RelationTestRepo:
-        class: App\Repository\Test\RelationTestRepo
+    RelationRepo:
+       class: App\Repository\Prod\RelationRepo
 
     # -------- services --------
 
@@ -58,3 +51,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # #38 Make v2 services accessible for tests via aliase). https://symfony.com/doc/current/service_container/alias_private.html#aliasing 
+    # #38 This creates a public alias: even though the original service is private. https://symfonycasts.com/screencast/phpunit/integration-tests
+    test.App\v2\OrderProductCreator:
+        alias: App\v2\OrderProductCreator
+        public: true
