[WIP] #40 Rename OrderShipping to OrderShippingService

--- a/symfony5/config/services_test.yaml
+++ b/symfony5/config/services_test.yaml
@@ -59,8 +59,8 @@ services:
         public: true
         
     # 40
-    test.App\v2\OrderShipping:
-        alias: App\v2\OrderShipping
+    test.App\v2\OrderShippingService:
+        alias: App\v2\OrderShippingService
         public: true
      
     test.App\v2\OrderShippingValidator:
