--- a/symfony5/composer.json
+++ b/symfony5/composer.json
@@ -25,6 +25,7 @@
     "require-dev": {
         "ext-json": "*",
         "dama/doctrine-test-bundle": "^6.3",
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/browser-kit": "5.0.*",
         "symfony/css-selector": "5.0.*",
         "symfony/maker-bundle": "^1.14"
