#53 [WIP] Move the user with product genetors to repos and a dedicated service

--- a/symfony5/config/services_test.yaml
+++ b/symfony5/config/services_test.yaml
@@ -62,3 +62,6 @@ services:
     test.App\Interfaces\IProductRepo:
         alias: App\Interfaces\IProductRepo
         public: true
+    test.App\User\UserWihProductsGenerator:
+        alias: App\User\UserWihProductsGenerator
+        public: true
