--- a/symfony5/composer.json
+++ b/symfony5/composer.json
@@ -29,7 +29,8 @@
         "symfony/browser-kit": "5.0.*",
         "symfony/css-selector": "5.0.*",
         "symfony/maker-bundle": "^1.14",
-        "theofidry/psysh-bundle": "^4.3"
+        "theofidry/psysh-bundle": "^4.3",
+        "phpmd/phpmd" : "^2.8"
     },
     "config": {
         "preferred-install": {
